Работающая версия проекта

--- a/hw-11/python/docker-compose.yml
+++ b/hw-11/python/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   spark:
     build: .
-    container_name: spark-catalyst
+    container_name: pyspark
     volumes:
       - ./:/app
     tty: true
